# rayt-rs

./: .gitignore  Cargo.toml  README.md
examples/: main.rs  scene1.toml
src/: camera.rs  color.rs  hittable.rs  lib.rs  main.rs  ray.rs  samplers.rs  scene_builder.rs  threadpool.rs  types.rs  world.rs
src/materials/: diffuse.rs  lambertian.rs  metal.rs  mod.rs  normals.rs
src/math/: constants.rs  hittable.rs  mod.rs  types.rs
src/math/primitives/: mod.rs  sphere.rs
