[package]
name = "rayt-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.17.0"
rayon = "1.11.0"
toml = "0.9.5"

[dependencies.glam]
version = "0.30.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.indicatif]
version = "0.18.0"
features = ["rayon"]
