[package]
name = "rayt-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
rayon = "1.11.0"
toml = "0.9.5"

[dependencies.glam]
version = "0.30.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.indicatif]
version = "0.18.0"
features = ["rayon"]
